--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: CrisYo's homepage
-description: Bookmark this to keep an eye on my project updates!
+description: Follow this to keep an eye on my thoughts updates!
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-show_downloads: "true"
+show_downloads: "false"
 # google_analytics: 0000
