--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: CrisYo's homepage
-description: Follow this to keep an eye on my thoughts updates!
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-show_downloads: "false"
-# google_analytics: 0000
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-cayman
