--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: CrisYo
-description: Share my thoughts.
+description: Share my thoughts
 show_downloads: true
-google_analytics:
 theme: jekyll-theme-cayman
